fix mobile alignment

--- a/themes/sollike/static/css/style.css
+++ b/themes/sollike/static/css/style.css
@@ -288,3 +288,9 @@ footer a {
   display: flex;
   justify-content: space-between;
 }
+
+@media (max-width: 600px) {
+  body {
+    text-align: left;
+  }
+}
